[gd_scene load_steps=8 format=3 uid="uid://cht33ifpawpnr"]

[ext_resource type="FontFile" uid="uid://b8pvc0etwwo81" path="res://fonts/DeltaBlock-2Oee3.ttf" id="1_4w0rl"]
[ext_resource type="Script" path="res://scenes_2d/main_menus/scripts/joined_player.gd" id="1_nkju7"]
[ext_resource type="Texture2D" uid="uid://cchwl8h14q8bp" path="res://icons/gamepad/gamepad-indicator.svg" id="2_b1iwt"]
[ext_resource type="Texture2D" uid="uid://dvcb1aelwnypb" path="res://icons/gamepad/keyboard-indicator.svg" id="4_uavhl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_35trx"]
bg_color = Color(0.164706, 0.164706, 0.164706, 0.501961)
border_width_left = 1
border_width_top = 4
border_width_right = 1
border_width_bottom = 4
border_color = Color(0.129412, 1, 0, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="LabelSettings" id="LabelSettings_tgpj7"]
font = ExtResource("1_4w0rl")
font_size = 32
font_color = Color(0, 0.65098, 0.184314, 1)
outline_size = 6

[sub_resource type="LabelSettings" id="LabelSettings_p5eyu"]
font = ExtResource("1_4w0rl")

[node name="JoinedPlayer" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_35trx")
script = ExtResource("1_nkju7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " Player 1"
label_settings = SubResource("LabelSettings_tgpj7")
horizontal_alignment = 1

[node name="GamepadIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_b1iwt")
expand_mode = 3
stretch_mode = 5

[node name="KeyboardIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_uavhl")
expand_mode = 3
stretch_mode = 5

[node name="HintLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "- Press select to leave -"
label_settings = SubResource("LabelSettings_p5eyu")
horizontal_alignment = 1
